Menu spacing fix

--- a/style.css
+++ b/style.css
@@ -31,11 +31,6 @@
 body {
     padding: 0;
     margin: 0;
-    scroll-behavior: smooth;
-}
-
-#root {
-    scroll-behavior: smooth;
 }
 
 h2 {
@@ -90,12 +85,15 @@ h2 {
 }
 
 #menu2 {
+    width: 80px;
     display: none;
 }
 
 #menu2 img {
-    top: 2px;
+    width: 15px;
+    top: 5px;
 }
+
 .menu img {
     position: absolute;
     right: 0;
@@ -140,6 +138,7 @@ h2 {
 }
 
 #dropdown ul {
+    list-style-type: none;
     position: absolute;
     top: 100px;
     right: 50px;
@@ -701,6 +700,7 @@ footer {
     }
     
     #dropdown ul {
+        list-style-type: none;
         position: absolute;
         top: 100px;
         right: 50px;
@@ -1218,6 +1218,7 @@ footer {
     }
     
     #dropdown ul {
+        list-style-type: none;
         position: absolute;
         top: 100px;
         right: 50px;
@@ -1750,6 +1751,7 @@ footer {
     }
     
     #dropdown ul {
+        list-style-type: none;
         position: absolute;
         top: 100px;
         right: 30px;
